# particle-pushers

./: LICENSE  README.md  pyproject.toml  setup.py
examples/: constant_magnetic_field.py  grad_b_and_e_cross_b_drift_fourth_order.py  grad_b_and_e_cross_b_drift_second_order.py  non_quadratic_electric_potential.py  quadratic_electric_potential.py  sheared_b_field_fourth_order.py  sheared_b_field_second_order.py
particle_pushers/: __init__.py  field.py  gamma.py  particle.py  pusher.py  pusher_template.py
particle_pushers.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
particle_pushers/comoving_frame/: __init__.py  gordon.py  hairer.py
particle_pushers/lab_frame/: __init__.py  boris.py  discrete_gradient.py  higuera.py  lapenta.py  petri.py  vay.py
particle_pushers/operators/: explicit_lab_frame_operators.py  explicit_particle_frame_operators.py  implicit_lab_frame_operators.py  implicit_particle_frame_operators.py
particle_pushers/pushers/: explicit_lab_frame_pushers.py  explicit_lab_frame_pushers_fourth_order.py  explicit_particle_frame_pushers.py  implicit_lab_frame_pushers.py  implicit_particle_frame_pushers.py
