[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = 'setuptools.build_meta'

[project]
name = 'particle-pushers'
version = '0.1.0'
dependencies = [
  'numpy',
  'scipy'
]
requires-python = '>=3.10'
authors = [
  {name = 'Ben McKeon', email = 'mckeon.ben@ul.ie'}
]
description = 'A suite of numerical integrators for relativistic charged particle tracking.'
readme = 'README.md'
license = 'MIT'
license-files = ['LICENSE.*']

[project.urls]
Repository = 'https://github.com/mckeon-ben/particle-pushers'
